--- a/flux/flux-deployment.yaml
+++ b/flux/flux-deployment.yaml
@@ -100,7 +100,7 @@ spec:
         - --ssh-keygen-dir=/var/fluxd/keygen
 
         # replace or remove the following URL
-        - --git-url=https://github.com/justintschulz/gitops101.git
+        - --git-url=git@github.com:justintschulz/gitops101.git
         - --git-branch=master
         - --git-path=deploy/kubernetes
 
